Revert "Merge pull request #5 from djv3/feature/a-star-escape"
This reverts commit ea3b21e8108fde9af3947d37e7bb055c0210b3c1, reversing
changes made to 19a301f2d17a8d1ba01a8bf7ce86a33deeffe0de.